--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ pages:
         # kevin's iMac has been setup as a runner with this tag
         - catalog_deploy
     script:
+        - npm install
         - npm run build
     artifacts:
         paths:
