--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "lit-html": "^1.1.0",
         "lodash": "^4.17.11",
         "moment": "^2.24.0",
-        "popper.js": "^1.14.7"
+        "popper.js": "^1.14.7",
+        "url-pattern": "^1.0.3"
     }
 }
