--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "browserslist": [
         "last 1 chrome versions"
     ],
+    "devDependencies": {
+        "docpress": "github:kjantzer/docpress#prod"
+    },
     "dependencies": {
         "component-emitter": "^1.3.0",
         "fuse.js": "^3.4.5",
