--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "lodash": "^4.17.11",
         "moment": "^2.24.0",
         "popper.js": "^1.14.7",
+        "quill": "^1.3.6",
         "url-pattern": "^1.0.3"
     }
 }
