Improvement tweaks, docs update
- Timer: let running be set upon creation
- Spinner Overlay: adjust color for dark theme
- Tabs: stop active-changed from bubbling (no need, and causes problems)
- Menu: change class name to b-menu to mitigate conflicts
- Improving docs (particularly the docpress version)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ pages:
     script:
         - npm install
         - npm run build
+        - npm run build-docs-script
         - npm run build-docs
     artifacts:
         paths:
