--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "lodash": "^4.17.11",
         "moment": "^2.24.0",
         "popper.js": "^1.14.7",
-        "quill": "^1.3.6",
+        "quill": "github:kjantzer/quill#shadow",
         "url-pattern": "^1.0.3"
     }
 }
