--- a/package.json
+++ b/package.json
@@ -8,11 +8,17 @@
         "build": "parcel build demo/index.html --out-dir public --public-url ./ --no-minify",
         "build-docs-script": "parcel build demo/docs.js --out-dir docs -o bui.js --no-minify",
         "build-docs-script-watch": "parcel watch demo/docs.js --out-dir docs -o bui.js",
-        "build-docs": "./node_modules/.bin/docpress build"
+        "build-docs": "./node_modules/.bin/docpress build",
+        "build-pages": "npm run build && npm run build-docs-script && npm run build-docs",
+        "publish-pages": "cd ./public && git add -A && git commit -m 'publish docs' && git push Github HEAD:gh-pages",
+        "build-and-publish-pages": "npm run build-pages && npm run publish-pages"
     },
     "keywords": [],
     "author": "Kevin Jantzer, Blackstone Publishing",
     "license": "MIT",
+    "alias": {
+        "bui": "./"
+    },
     "browserslist": [
         "last 1 chrome versions"
     ],
