--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
         "last 1 chrome versions"
     ],
     "devDependencies": {
-        "docpress": "github:kjantzer/docpress#prod"
+        "docpress": "github:kjantzer/docpress#prod",
+        "parcel-bundler": "1.12.4"
     },
     "dependencies": {
         "@fnando/sparkline": "^0.3.10",
