--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "url": "https://github.com/kjantzer/bui"
     },
     "scripts": {
-        "start": "parcel demo/index.html --out-dir demo/dist",
+        "start": "parcel demo/index.html --no-autoinstall --out-dir demo/dist",
         "build": "parcel build demo/index.html --out-dir public --public-url ./ --no-minify",
         "build-docs-script": "parcel build demo/docs.js --out-dir docs -o bui.js --no-minify",
         "build-docs-script-watch": "parcel watch demo/docs.js --out-dir docs -o bui.js",
@@ -41,8 +41,11 @@
     ],
     "devDependencies": {
         "docpress": "github:kjantzer/docpress#prod",
+        "highlight.js": "^10.0.3",
         "less": "^3.11.1",
-        "parcel-bundler": "1.12.4"
+        "marked": "^1.0.0",
+        "parcel-bundler": "1.12.4",
+        "parcel-plugin-markdown-string": "^1.4.2"
     },
     "dependencies": {
         "@fnando/sparkline": "^0.3.10",
