--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "build-docs-script-watch": "parcel watch demo/docs.js --out-dir docs -o bui.js",
         "build-docs": "./node_modules/.bin/docpress build",
         "build-pages": "npm run build && npm run build-docs-script && npm run build-docs",
-        "publish-pages": "cd ./public && git add -A && git commit -m 'publish docs' && git push Github HEAD:gh-pages",
+        "publish-pages": "cd ./public && git add -A && git commit -m 'publish docs' && git push origin HEAD:gh-pages",
         "build-and-publish-pages": "npm run build-pages && npm run publish-pages"
     },
     "keywords": [
