--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dependencies": {
         "@fnando/sparkline": "^0.3.10",
         "component-emitter": "^1.3.0",
+        "dayjs": "^1.8.35",
         "fuse.js": "^3.4.5",
         "lit-element": "^2.4.0",
         "lit-html": "^1.3.0",
