--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "fuse.js": "^3.4.5",
         "lit-element": "^2.4.0",
         "lit-html": "^1.3.0",
+        "lit-virtualizer": "^0.4.2",
         "lodash": "^4.17.11",
         "numeral": "^2.0.6",
         "popper.js": "^1.14.7",
