--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "docpress": "github:kjantzer/docpress#prod",
         "highlight.js": "^10.0.3",
         "less": "^3.11.1",
-        "marked": "^1.0.0",
+        "marked": "^2.0.0",
         "parcel-bundler": "^1.12.4",
         "parcel-plugin-markdown-string": "^1.4.2"
     },
@@ -56,6 +56,7 @@
         "numeral": "^2.0.6",
         "popper.js": "^1.14.7",
         "quill": "github:kjantzer/quill#shadow",
+        "workbox-recipes": "^6.1.0",
         "socket.io": "^2.3.0",
         "url-pattern": "^1.0.3"
     }
