--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
     },
     "dependencies": {
         "@fnando/sparkline": "^0.3.10",
+        "@tiptap/core": "*",
+        "@tiptap/extension-placeholder": "*",
+        "@tiptap/extension-text-align": "*",
+        "@tiptap/starter-kit": "*",
         "component-emitter": "^1.3.0",
         "dayjs": "^1.8.35",
         "fuse.js": "^3.4.5",
@@ -56,8 +60,8 @@
         "numeral": "^2.0.6",
         "popper.js": "^1.14.7",
         "quill": "github:yananym/quill",
-        "workbox-recipes": "^6.1.0",
         "socket.io": "^2.3.0",
-        "url-pattern": "^1.0.3"
+        "url-pattern": "^1.0.3",
+        "workbox-recipes": "^6.1.0"
     }
 }
