--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
     },
     "dependencies": {
         "@fnando/sparkline": "^0.3.10",
-        "@tiptap/core": "^2.0.0-beta.118",
-        "@tiptap/extension-character-count": "^2.0.0-beta.13",
-        "@tiptap/extension-placeholder": "*",
-        "@tiptap/extension-text-align": "^2.0.0-beta.23",
-        "@tiptap/starter-kit": "*",
-        "@tiptap/suggestion": "*",
+        "@tiptap/core": "2.0.0-beta.122",
+        "@tiptap/extension-character-count": "2.0.0-beta.13",
+        "@tiptap/extension-placeholder": "2.0.0-beta.33",
+        "@tiptap/extension-text-align": "2.0.0-beta.23",
+        "@tiptap/extension-typography": "^2.0.0-beta.15",
+        "@tiptap/starter-kit": "2.0.0-beta.123",
+        "@tiptap/suggestion": "2.0.0-beta.72",
         "backbone": "^1.4.0",
         "component-emitter": "^1.3.0",
         "dayjs": "^1.8.35",
