--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "lit-html": "^1.3.0",
         "lit-virtualizer": "^0.4.2",
         "lodash": "^4.17.11",
+        "node-vibrant": "^3.2.1-alpha.1",
         "numeral": "^2.0.6",
         "popper.js": "^1.14.7",
         "quill": "github:yananym/quill",
