--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "backbone": "^1.4.0",
         "component-emitter": "^1.3.0",
         "dayjs": "^1.8.35",
+        "fluent-ffmpeg": "^2.1.2",
         "fuse.js": "^3.4.5",
         "lit-element": "^2.4.0",
         "lit-html": "^1.3.0",
