--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "@tiptap/extension-character-count": "2.0.0-beta.18",
         "@tiptap/extension-placeholder": "2.0.0-beta.44",
         "@tiptap/extension-text-align": "2.0.0-beta.29",
+        "@tiptap/extension-superscript": "^2.0.0-beta.10",
         "@tiptap/extension-typography": "2.0.0-beta.19",
         "@tiptap/starter-kit": "2.0.0-beta.146",
         "@tiptap/suggestion": "2.0.0-beta.83",
