--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,17 @@
-# Gitlab CI (Continuous Integration)
-image: node:4.2.2
+image: node:14
+
 # add 'node_modules' to cache for speeding up builds
 cache:
   paths:
     - node_modules/ # Node modules and dependencies
 
-# pages:
-#     stage: deploy
-#     tags:
-#         # kevin's iMac has been setup as a runner with this tag
-#         - catalog_deploy
-#     script:
-#         - npm install
-#         - npm run build
-#     artifacts:
-#         paths:
-#             - public
+pages:
+    stage: deploy
+    tags:
+        - docker
+    script:
+        - npm install
+        - npm run build
+    artifacts:
+        paths:
+            - public
