--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "dependencies": {
         "@fnando/sparkline": "^0.3.10",
         "@lit-labs/virtualizer": "^0.7.0",
-        "@material-icons/svg": "github:material-icons/material-icons#original",
+        "@material-icons/svg": "github:material-icons/material-icons#5c27c3f",
         "@tiptap/core": "2.0.0-beta.207",
         "@tiptap/extension-character-count": "2.0.0-beta.207",
         "@tiptap/extension-link": "2.0.0-beta.207",
