--- a/package.json
+++ b/package.json
@@ -48,15 +48,15 @@
         "@fnando/sparkline": "^0.3.10",
         "@lit-labs/virtualizer": "^0.7.0",
         "@material-icons/svg": "github:material-icons/material-icons#5c27c3f",
-        "@tiptap/core": "2.0.0-beta.207",
-        "@tiptap/extension-character-count": "2.0.0-beta.207",
-        "@tiptap/extension-link": "2.0.0-beta.207",
-        "@tiptap/extension-placeholder": "2.0.0-beta.207",
-        "@tiptap/extension-superscript": "2.0.0-beta.207",
-        "@tiptap/extension-text-align": "2.0.0-beta.207",
-        "@tiptap/extension-typography": "2.0.0-beta.207",
-        "@tiptap/starter-kit": "2.0.0-beta.207",
-        "@tiptap/suggestion": "2.0.0-beta.207",
+        "@tiptap/core": "^2.1.8",
+        "@tiptap/extension-character-count": "^2.1.8",
+        "@tiptap/extension-link": "^2.1.8",
+        "@tiptap/extension-placeholder": "^2.1.8",
+        "@tiptap/extension-superscript": "^2.1.8",
+        "@tiptap/extension-text-align": "^2.1.8",
+        "@tiptap/extension-typography": "^2.1.8",
+        "@tiptap/starter-kit": "^2.1.8",
+        "@tiptap/suggestion": "^2.1.8",
         "@webtoon/psd": "^0.3.0",
         "backbone": "^1.4.0",
         "component-emitter": "^1.3.0",
@@ -69,6 +69,16 @@
         "node-vibrant": "^3.2.1-alpha.1",
         "numeral": "^2.0.6",
         "popper.js": "^1.14.7",
+        "prosemirror-commands": "1.5.2",
+        "prosemirror-dropcursor": "1.8.1",
+        "prosemirror-gapcursor": "1.3.2",
+        "prosemirror-history": "1.3.2",
+        "prosemirror-keymap": "1.2.2",
+        "prosemirror-model": "1.19.3",
+        "prosemirror-schema-list": "1.3.0",
+        "prosemirror-state": "1.4.3",
+        "prosemirror-transform": "1.7.5",
+        "prosemirror-view": "1.31.7",
         "puppeteer": "13.5.1",
         "socket.io": "^2.3.0",
         "tinycolor2": "^1.4.2",
