--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "popper.js": "^1.14.7",
         "puppeteer": "13.5.1",
         "socket.io": "^2.3.0",
+        "sortablejs": "^1.15.3",
         "tinycolor2": "^1.4.2",
         "url-pattern": "^1.0.3",
         "workbox-recipes": "^6.1.0",
