--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "tinycolor2": "^1.4.2",
         "url-pattern": "^1.0.3",
         "workbox-recipes": "^6.1.0",
+        "qr-code-styling": "1.6.0-rc.1",
         "xml2js": "^0.4.23"
     }
 }
