--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "@tiptap/starter-kit": "2.1.8",
         "@tiptap/suggestion": "2.1.8",
         "@webtoon/psd": "^0.3.0",
-        "backbone": "^1.5.0",
+        "backbone": "1.5.0",
         "component-emitter": "^1.3.0",
         "dayjs": "^1.8.35",
         "fluent-ffmpeg": "^2.1.2",
